--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Hazte escuchar en nuestra asamblea legislativa.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+ath_movil: 787-xxx-xxxx
 letter_cost: $0.50
 # twitter_username: jekyllrb
 # github_username:  jekyll
